# opencv_linux

./: README.md
opencv/: CMakeLists.txt  package.xml
opencv/src/: image_converter.cpp  squares.cpp
